# tugas_besar_SEKURO17

./: readme.txt
install/: local_setup.sh  setup.sh
install/gazebo_dev/share/gazebo_dev/: local_setup.sh  package.sh
install/gazebo_dev/share/gazebo_dev/cmake/: gazebo_devConfig.cmake
install/gazebo_msgs/share/gazebo_msgs/: local_setup.sh  package.sh
install/gazebo_msgs/share/gazebo_msgs/cmake/: export_gazebo_msgs__rosidl_generator_cExport.cmake  export_gazebo_msgs__rosidl_generator_cppExport.cmake  export_gazebo_msgs__rosidl_generator_pyExport-noconfig.cmake  export_gazebo_msgs__rosidl_generator_pyExport.cmake  export_gazebo_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_gazebo_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  gazebo_msgs__rosidl_typesupport_cppExport.cmake  gazebo_msgs__rosidl_typesupport_introspection_cExport.cmake  gazebo_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
install/my_robot/lib/my_robot/: camera_subscriber  launch  lidar_node  my_robot_node
install/my_robot/share/my_robot/: package.sh
log/: latest_build
penjelasan project dan video/: alur_kerja_ros.txt  penjelasan_project.txt  video_robot_lidar.txt  video_robot_movement.txt
src/my_robot/: package.xml  setup.py
src/my_robot/launch/: launch.py  minibot_launch.py
src/my_robot/models/my_robot/: mini_robot.sdf  model.config  model.sdf  model.urdf
src/my_robot/my_robot/: camera_show.py  image_processor.py  lidar_node.py
src/my_robot/worlds/: imu_world.sdf  minibot_world.sdf  my_world.sdf
(+252 files in other folders)
