<?xml version="1.0"?>
<package format="3">
  <name>my_robot</name>
  <version>0.0.0</version>
  <description>Your package description here</description>
  <maintainer email="ahmadmarzuki303@gmail.com">ahmrrzz</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
